Changes for DateTime-Event-ICal

0.00_02
- bysetpos
- count
- by(units)

0.00_01
- base implementation:
  until, interval, dtstart, dtend, until
